objects/FSL_Cummins_Care_Number__mdt.object
<CustomObject>
    <fields>
        <fullName>ActiveCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActiveCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asia_and_Europe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asia and Europe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cummins_Care_Numbers__c</fullName>
        <label>Cummins Care Numbers</label>
        <type>TextArea</type>
    </fields>
    <label>Cummins Care Number</label>
    <pluralLabel>Cummins Care Number</pluralLabel>
</CustomObject>